jilles      2006/05/23 22:00:58 UTC	(20060523-5293)
  Log:
  Make explicit --enable-sasl work.
  

  Changes:	Modified:
  +2 -2		trunk/configure.ac (File Modified) 


jilles      2006/05/23 21:48:03 UTC	(20060523-5291)
  Log:
  Fix Id keyword and remove C++ comments.
  

  Changes:	Modified:
  +5 -5		trunk/modules/saslserv/pubkey.c (File Modified) (Property Modified)


gxti        2006/05/23 21:18:47 UTC	(20060523-5289)
  Log:
  Added helpfile for ChanServ SET PROPERTY.
  

  Changes:	Modified:
  +13 -0	trunk/help/cservice/set_property (File Added) 


gxti        2006/05/22 22:36:37 UTC	(20060522-5287)
  Log:
  Minor grammatical fix.
  

  Changes:	Modified:
  +1 -1		trunk/help/oservice/akill (File Modified) 


gxti        2006/05/22 01:21:37 UTC	(20060522-5285)
  Log:
  Precursory DSA/RSA-SHA1 mechanism (pubkey.so).
  

  Changes:	Modified:
  +4 -1		trunk/modules/saslserv/Makefile.in (File Modified) 
  +454 -0	trunk/modules/saslserv/pubkey.c (File Added) 


nenolod     2006/05/22 00:37:43 UTC	(20060522-5283)
  Log:
  no explanation necessary...

  Changes:	Modified:
  +35 -0	trunk/contrib/cs_kickdots.c (File Added) 


jilles      2006/05/21 00:21:33 UTC	(20060521-5281)
  Log:
  Moved netadmin to general:admin and hid it under a #define USE_NETADMIN.
  We don't endorse stuff like this but if people really want it then so
  be it.
  

  Changes:	Modified:
  +14 -12	trunk/protocol/plexus.c (File Modified) 


nenolod     2006/05/20 23:37:18 UTC	(20060520-5279)
  Log:
  - Improve support for PleXusIRCd 3.x, patch by eggy.
  

  Changes:	Modified:
  +17 -7	trunk/protocol/plexus.c (File Modified) 


jilles      2006/05/19 17:07:13 UTC	(20060519-5277)
  Log:
  NickServ GHOST: fix "Invalid password for (null)".
  Reported by damian.
  

  Changes:	Modified:
  +11 -4	trunk/modules/nickserv/ghost.c (File Modified) 


nenolod     2006/05/17 17:20:05 UTC	(20060517-5275)
  Log:
  - version bump: 1.1.1
  

  Changes:	Modified:
  +11 -11	trunk/configure (File Modified) 