@@ -3,7 +3,7 @@ dnl Rights to this code are documented in doc/LICENSE.
 dnl
 dnl This file is the autoconf stub.
 dnl
-dnl $Id: configure.ac 5293 2006-05-23 22:00:58Z jilles $
+dnl $Id: configure.ac 5297 2006-05-23 22:10:54Z jilles $
 
 dnl Process this file with autoconf to produce a configure script.
 
@@ -12,7 +12,7 @@ AC_PREREQ(2.57)
 AC_INIT(atheme, 1.1.1, bugs@atheme.org)
 
 dnl Sneaky way to get an id into the configure script.
-AC_COPYRIGHT([$Id: configure.ac 5293 2006-05-23 22:00:58Z jilles $])
+AC_COPYRIGHT([$Id: configure.ac 5297 2006-05-23 22:10:54Z jilles $])
 
 AC_CONFIG_AUX_DIR(autoconf)
 
@@ -290,15 +290,15 @@ AC_ARG_ENABLE(sasl,
 if test "$sasl" != "no" ; then
     AC_DEFINE(USE_SASL, 1, [Define to 1 if you want builtin SASL.])
     SASL=yes
-    SASL_C="sasl.c main.c plain.c crypt.c"
+    SASL_DIR="saslserv"
 else
     SASL=no
-    SASL_C=
+    SASL_DIR=
 fi
 AC_MSG_CHECKING([if SASL should be used])
 AC_MSG_RESULT($SASL)
 
-AC_SUBST(SASL_C)
+AC_SUBST(SASL_DIR)
 
 echo " "
 echo "Module support"
