@@ -1,3 +1,13 @@
+jilles      2006/05/23 22:01:30 UTC	(20060523-5295)
+  Log:
+  Rerun autoconf and autoheader.
+  
+
+  Changes:	Modified:
+  +4 -4		trunk/configure (File Modified) 
+  +1 -1		trunk/include/sysconf.h.in (File Modified) 
+
+
 jilles      2006/05/23 22:00:58 UTC	(20060523-5293)
   Log:
   Make explicit --enable-sasl work.
